--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,14 @@
 {
     "python.linting.enabled": true,
-    "zenMode.hideLineNumbers": false
+    "zenMode.hideLineNumbers": false,
+    "python.linting.flake8Enabled": false,
+    "python.linting.pylintEnabled": false,
+    "python.linting.banditEnabled": false,
+    "python.pythonPath": "toadBot-env\\Scripts\\python.exe",
+    "python.linting.mypyEnabled": true,
+    "cSpell.words": [
+        "SIGABRT",
+        "dotenv",
+        "getenv"
+    ],
 }
